[package]
name = "animgraph"
version = "0.2.0-dev"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Animation data flow library using hierarchical state machines"
homepage = "https://animgraph.github.io/animgraph/"
repository = "https://github.com/animgraph/animgraph"
authors = ["Jonathan Berg <contact@devjobe.com>"]
keywords = ["gamedev", "animation"]
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
thiserror = "1.0"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
glam = "0.24"

[dependencies.uuid]
version = "1.3.3"
optional = true
features = [
    "v4",
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
    "serde"
]

[features]
default = ["compiler"]
compiler = ["uuid"]